# zad12.2

./: CMakeLists.txt  Dockerfile  Jenkinsfile
src/: CMakeLists.txt  calculator.cpp
test/: CMakeLists.txt  test_calculator.cpp
